--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "description": "Wayne Hu's blog",
   "version": "0.0.1",
   "dependencies": {
+    "express": "^4.13.3",
     "react": "^0.14.3",
+    "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3"
   },
   "devDependencies": {
@@ -12,9 +14,12 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.23.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-webpack": "^1.5.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   }
