--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "^4.13.3",
+    "marked": "^0.3.5",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "react-markdown-file": "0.0.4"
   },
   "devDependencies": {
     "babel": "^6.3.26",
@@ -18,6 +20,8 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-webpack": "^1.5.0",
+    "html-loader": "^0.4.0",
+    "markdown-loader": "^0.1.7",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
