--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ description: > # this means to ignore newlines until "baseurl:"
   在南太平洋农业小国新西兰工作生活已有一年半时间,目前在一家不算小的小公司从事Java开发工作,前不久拿到新西兰的Resident Visa。
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: Wayne_胡焕峰
+twitter_username: 356173471
 github_username:  Wayne-Hu
 
 # Build settings
-markdown: markdown
+markdown: kramdown
