add more articles

--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,11 @@
 title: Wayne's Blog
 email: huhuanfeng198@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  工作已近8年时间,从什么都不懂的刚毕业的大学生,到什么都不懂的即将30岁的怪蜀黍。
-  在南太平洋农业小国新西兰工作生活已有一年半时间,目前在一家不算小的小公司从事Java开发工作,前不久拿到新西兰的Resident Visa。
+  工作近8年时间,目前在南太平洋小国新西兰工作生活,在一家不算小的小公司从事Java开发工作,不久前拿到新西兰的Resident Visa。
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: 356173471
-github_username:  Wayne-Hu
+#url: "http://yourdomain.com" # the base hostname & protocol for your site
+#twitter_username: 356173471
+#github_username:  Wayne-Hu
 
 # Build settings
 markdown: kramdown
